--- a/source/index.html
+++ b/source/index.html
@@ -437,7 +437,7 @@
       </section>
       <section class="map">
         <h2 class="visually-hidden">Карта</h2>
-        <div class="map__wrapper">
+        <div class="map__wrapper" id="map">
           <picture>
             <source type="image/webp" media="(min-width: 1440px)" srcset="./img/map/map-desktop@1x.webp 1x, ./img/map/map-desktop@2x.webp 2x" width="1440" height="540">
             <source type="image/webp" media="(min-width: 768px)" srcset="./img/map/map-tablet@1x.webp 1x, ./img/map/map-tablet@2x.webp 2x" width="768" height="480">
@@ -447,7 +447,6 @@
             <source media="(min-width: 768px)" srcset="./img/map/map-tablet@1x.png 1x, ./img/map/map-tablet@2x.png 2x" width="768" height="480">
             <img class="map__map-image" src="./img/map/map-mobile@1x.png" srcset="./img/map/map-mobile@2x.png 2x" width="320" height="420" alt="Ардес магазина по адресу г. Санкт-Петербург, набережная реки Карповки, дом 5.">
           </picture>
-          <iframe class="map__google map__google--nojs" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d176.4958931104449!2d30.31730772840996!3d59.96825806130831!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sby!4v1687711054720!5m2!1sru!2sby" width="320" height="420" allowfullscreen title="Ардес магазина по адресу г. Санкт-Петербург, набережная реки Карповки, дом 5."></iframe>
         </div>
       </section>
     </main>
@@ -553,7 +552,7 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer></script>
-    <script src="./js/script.js" defer></script>
+    <script src="./js/main.js" type="module" defer></script>
   </body>
 
 </html>
