--- a/source/index.html
+++ b/source/index.html
@@ -19,20 +19,20 @@
   </head>
 
   <body class="page__body">
-    <header class="main-header">
-      <div class="main-header__wrapper">
-        <div class="main-header__logo-container">
-          <a class="main-header__logo-link" href="index.html">
+    <header class="header">
+      <div class="header__wrapper">
+        <div class="header__logo-container">
+          <a class="header__logo-link" href="index.html">
             <picture>
               <source media="(min-width: 1440px)" srcset="./img/logo/logo-desktop.svg" width="170" height="36">
               <source media="(min-width: 768px)" srcset="./img/logo/logo-tablet.svg" width="82" height="36">
-              <img class="main-header__logo-image" src="./img/logo/logo-mobile.svg" width="32" height="36" alt="Логотип сайта Drink2Go.">
+              <img class="header__logo-image" src="./img/logo/logo-mobile.svg" width="32" height="36" alt="Логотип сайта Drink2Go.">
             </picture>
           </a>
-          <p class="main-header__text">Интернет-магазин кофейных напитков</p>
+          <p class="header__text">Интернет-магазин кофейных напитков</p>
         </div>
-        <nav class="main-header__nav main-nav main-nav--closed main-nav--nojs">
-          <ul class="main-nav__list site-list">
+        <nav class="header__nav nav nav--closed nav--nojs">
+          <ul class="nav__list site-list">
             <li class="site-list__item">
               <a class="site-list__link site-list__link--current" href="#!">Главная</a>
             </li>
@@ -47,29 +47,29 @@
             </li>
           </ul>
         </nav>
-        <div class="main-header__user-container">
-          <ul class="user-list">
-            <li class="user-list__item">
-              <a class="user-list__link" href="#!">
-                <svg class="user-list__icon user-list__icon--user" width="16" height="16" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M10.6667 4C10.6667 5.47276 9.47276 6.66667 8 6.66667C6.52724 6.66667 5.33333 5.47276 5.33333 4C5.33333 2.52724 6.52724 1.33333 8 1.33333C9.47276 1.33333 10.6667 2.52724 10.6667 4ZM12 4C12 6.20914 10.2091 8 8 8C5.79086 8 4 6.20914 4 4C4 1.79086 5.79086 0 8 0C10.2091 0 12 1.79086 12 4ZM3.19673 12.3102C4.43611 11.2774 6.1613 10.6667 8 10.6667C9.8387 10.6667 11.5639 11.2774 12.8033 12.3102C14.0354 13.337 14.6667 14.6719 14.6667 16H16C16 14.2321 15.1573 12.5363 13.6569 11.286C12.1566 10.0357 10.1218 9.33333 8 9.33333C5.87821 9.33333 3.8434 10.0357 2.34315 11.286C0.842686 12.5363 0 14.2321 0 16L1.33333 16C1.33333 14.6719 1.96465 13.337 3.19673 12.3102Z" />
-                </svg>
-                <span class="user-list__text">Войти</span>
-              </a>
-            </li>
-            <li class="user-list__item">
-              <a class="user-list__link" href="#!">
-                <svg class="user-list__icon user-list__icon--cart" width="16" height="16" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M5.66091 3.87546L5.89351 6.66667H10.1065L10.3391 3.87546C10.4531 2.50699 9.37321 1.33333 8 1.33333C6.62679 1.33333 5.54687 2.50699 5.66091 3.87546ZM11.4444 6.66667L11.6678 3.98618C11.8466 1.84036 10.1533 0 8 0C5.84674 0 4.15336 1.84036 4.33218 3.98618L4.55556 6.66667H1.34687H0L0.190476 8L1.00626 13.7105C1.19393 15.0242 2.31905 16 3.64612 16H12.3539C13.6809 16 14.8061 15.0242 14.9937 13.7105L15.8095 8L16 6.66667H14.6531H11.4444ZM11.3333 8H11.2801L11.0579 10.6667H14.0817L14.4627 8H11.3333ZM9.94213 8H6.05787L6.28009 10.6667H9.71991L9.94213 8ZM4.71991 8H4.66667H1.53735L1.9183 10.6667H4.94213L4.71991 8ZM6.61342 14.6667L6.3912 12H9.6088L9.38658 14.6667H6.61342ZM10.9468 12L10.7245 14.6667H12.3539C13.0174 14.6667 13.58 14.1788 13.6738 13.5219L13.8912 12H10.9468ZM5.05324 12L5.27547 14.6667H3.64612C2.98259 14.6667 2.42003 14.1788 2.32619 13.5219L2.10877 12H5.05324Z" />
-                </svg>
-                <span class="user-list__text">Корзина</span>
-              </a>
-            </li>
-          </ul>
-          <button class="user-list__toggle toggle main-nav__toggle" type="button">
-            <span class="visually-hidden">Открыть меню.</span>
-          </button>
-        </div>
+        <ul class="header__list user-list user-list--nojs">
+          <li class="user-list__item">
+            <a class="user-list__link" href="#!">
+              <svg class="user-list__icon user-list__icon--user" width="16" height="16" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M10.6667 4C10.6667 5.47276 9.47276 6.66667 8 6.66667C6.52724 6.66667 5.33333 5.47276 5.33333 4C5.33333 2.52724 6.52724 1.33333 8 1.33333C9.47276 1.33333 10.6667 2.52724 10.6667 4ZM12 4C12 6.20914 10.2091 8 8 8C5.79086 8 4 6.20914 4 4C4 1.79086 5.79086 0 8 0C10.2091 0 12 1.79086 12 4ZM3.19673 12.3102C4.43611 11.2774 6.1613 10.6667 8 10.6667C9.8387 10.6667 11.5639 11.2774 12.8033 12.3102C14.0354 13.337 14.6667 14.6719 14.6667 16H16C16 14.2321 15.1573 12.5363 13.6569 11.286C12.1566 10.0357 10.1218 9.33333 8 9.33333C5.87821 9.33333 3.8434 10.0357 2.34315 11.286C0.842686 12.5363 0 14.2321 0 16L1.33333 16C1.33333 14.6719 1.96465 13.337 3.19673 12.3102Z" />
+              </svg>
+              <span class="user-list__text">Войти</span>
+            </a>
+          </li>
+          <li class="user-list__item">
+            <a class="user-list__link" href="#!">
+              <svg class="user-list__icon user-list__icon--cart" width="16" height="16" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M5.66091 3.87546L5.89351 6.66667H10.1065L10.3391 3.87546C10.4531 2.50699 9.37321 1.33333 8 1.33333C6.62679 1.33333 5.54687 2.50699 5.66091 3.87546ZM11.4444 6.66667L11.6678 3.98618C11.8466 1.84036 10.1533 0 8 0C5.84674 0 4.15336 1.84036 4.33218 3.98618L4.55556 6.66667H1.34687H0L0.190476 8L1.00626 13.7105C1.19393 15.0242 2.31905 16 3.64612 16H12.3539C13.6809 16 14.8061 15.0242 14.9937 13.7105L15.8095 8L16 6.66667H14.6531H11.4444ZM11.3333 8H11.2801L11.0579 10.6667H14.0817L14.4627 8H11.3333ZM9.94213 8H6.05787L6.28009 10.6667H9.71991L9.94213 8ZM4.71991 8H4.66667H1.53735L1.9183 10.6667H4.94213L4.71991 8ZM6.61342 14.6667L6.3912 12H9.6088L9.38658 14.6667H6.61342ZM10.9468 12L10.7245 14.6667H12.3539C13.0174 14.6667 13.58 14.1788 13.6738 13.5219L13.8912 12H10.9468ZM5.05324 12L5.27547 14.6667H3.64612C2.98259 14.6667 2.42003 14.1788 2.32619 13.5219L2.10877 12H5.05324Z" />
+              </svg>
+              <span class="user-list__text">Корзина</span>
+            </a>
+          </li>
+          <li class="user-list__item user-list__item--button">
+            <button class="user-list__toggle toggle toggle--closed" type="button">
+              <span class="visually-hidden">Открыть меню.</span>
+            </button>
+          </li>
+        </ul>
       </div>
     </header>
 
@@ -455,17 +455,17 @@
       </section>
     </main>
 
-    <footer class="main-footer">
-      <div class="main-footer__wrapper">
-        <div class="main-footer__header-container">
-          <a class="main-footer__logo" href="index.html">
+    <footer class="footer">
+      <div class="footer__wrapper">
+        <div class="footer__header-container">
+          <a class="footer__logo" href="index.html">
             <picture>
               <source media="(min-width: 768px)" srcset="./img/logo/logo-desktop.svg" width="170" height="36">
-              <img class="main-footer__logo-image" src="./img/logo/logo-tablet.svg" width="82" height="36" alt="Логотип сайта Drink2Go.">
+              <img class="footer__logo-image" src="./img/logo/logo-tablet.svg" width="82" height="36" alt="Логотип сайта Drink2Go.">
             </picture>
           </a>
-          <span class="main-footer__text">Интернет-магазин кофейных напитков</span>
-          <section class="main-footer__social social">
+          <span class="footer__text">Интернет-магазин кофейных напитков</span>
+          <section class="footer__social social">
             <h2 class="visually-hidden">Социальные сети.</h2>
             <ul class="social__list">
               <li class="social__item">
@@ -495,7 +495,7 @@
             </ul>
           </section>
         </div>
-        <section class="main-footer__menu menu">
+        <section class="footer__menu menu">
           <h3 class="menu__title title-small">Интернет-магазин
             <span class="visually-hidden"> ссылки.</span>
           </h3>
@@ -514,7 +514,7 @@
             </li>
           </ul>
         </section>
-        <section class="main-footer__media media">
+        <section class="footer__media media">
           <h3 class="media__title title-small">Медиа
             <span class="visually-hidden"> ссылки.</span>
           </h3>
@@ -530,7 +530,7 @@
             </li>
           </ul>
         </section>
-        <address class="main-footer__contacts contacts">
+        <address class="footer__contacts contacts">
           <h3 class="contacts__title title-small">Контакты</h3>
           <p class="contacts__text">
             Санкт-Петербург, набережная реки Карповки, дом 5
@@ -538,7 +538,7 @@
           <a class="contacts__link" href="tel:+79999999999">
             +7 (999) 999-99-99</a>
         </address>
-        <section class="main-footer__copyright copyright">
+        <section class="footer__copyright copyright">
           <h2 class="visually-hidden">Авторское право.</h2>
           <p class="copyright__text">Разработано в</p>
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML Academy
