--- a/source/index.html
+++ b/source/index.html
@@ -530,14 +530,16 @@
             </li>
           </ul>
         </section>
-        <address class="footer__contacts contacts">
+        <section class="footer__contacts contacts">
           <h3 class="contacts__title title-small">Контакты</h3>
-          <p class="contacts__text">
-            Санкт-Петербург, набережная реки Карповки, дом 5
-          </p>
-          <a class="contacts__link" href="tel:+79999999999">
-            +7 (999) 999-99-99</a>
-        </address>
+          <address class="contacts__address">
+            <p class="contacts__text">
+              Санкт-Петербург, набережная реки Карповки, дом 5
+            </p>
+            <a class="contacts__link" href="tel:+79999999999">
+              +7 (999) 999-99-99</a>
+          </address>
+        </section>
         <section class="footer__copyright copyright">
           <h2 class="visually-hidden">Авторское право.</h2>
           <p class="copyright__text">Разработано в</p>
