--- a/source/index.html
+++ b/source/index.html
@@ -233,31 +233,28 @@
             </fieldset>
             <fieldset class="form__group form__group--country">
               <legend class="form__heading">Страна произрастания</legend>
-              <label class="form__checkbox checkbox">
-                <input class="checkbox__input visually-hidden" type="checkbox" name="country" value="brazil" checked>
-                Бразилия
-                <span class="checkbox__mark"></span>
-              </label>
-              <label class="form__checkbox checkbox">
-                <input class="checkbox__input visually-hidden" type="checkbox" name="country" value="ethiopia">
-                Эфиопия
-                <span class="checkbox__mark"></span>
-              </label>
-              <label class="form__checkbox checkbox">
-                <input class="checkbox__input visually-hidden" type="checkbox" name="country" value="colombia">
-                Колумбия
-                <span class="checkbox__mark"></span>
-              </label>
-              <label class="form__checkbox checkbox">
-                <input class="checkbox__input visually-hidden" type="checkbox" name="country" value="costa-rica">
-                Коста-Рика
-                <span class="checkbox__mark"></span>
-              </label>
-              <label class="form__checkbox checkbox">
-                <input class="checkbox__input visually-hidden" type="checkbox" name="country" value="peru" disabled>
-                Перу
-                <span class="checkbox__mark"></span>
-              </label>
+              <ul class="form__list">
+                <li class="form__item checkbox">
+                  <input class="checkbox__input visually-hidden" type="checkbox" id="brazil" name="country" value="brazil" checked>
+                  <label class="checkbox__label" for="brazil">Бразилия</label>
+                </li>
+                <li class="form__item checkbox">
+                  <input class="checkbox__input visually-hidden" type="checkbox" id="ethiopia" name="country" value="ethiopia">
+                  <label class="checkbox__label" for="ethiopia">Эфиопия</label>
+                </li>
+                <li class="form__item checkbox">
+                  <input class="checkbox__input visually-hidden" type="checkbox" id="colombia" name="country" value="colombia">
+                  <label class="checkbox__label" for="colombia">Колумбия</label>
+                </li>
+                <li class="form__item checkbox">
+                  <input class="checkbox__input visually-hidden" type="checkbox" id="costa" name="country" value="costa-rica">
+                  <label class="checkbox__label" for="costa">Коста-Рика</label>
+                </li>
+                <li class="form__item checkbox">
+                  <input class="checkbox__input visually-hidden" type="checkbox" id="peru" name="country" value="peru" disabled>
+                  <label class="checkbox__label" for="peru">Перу</label>
+                </li>
+              </ul>
             </fieldset>
             <div class="form__button-container">
               <button class="form__button button" type="submit">Применить</button>
