--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="keywords" content="кофе, кофеин, напиток, свежесваренный">
+    <meta name="description" content="Сбалансированная доза кофеина даст мощный заряд энергии">
     <link rel="icon" href="./favicon.ico">
     <link rel="icon" href="./img/favicons/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="./img/favicons/apple.png">
